# ai-tax-cpa-agent

./: .gitignore  BUILD_REPORT.md  DEMO_GUIDE.md  DEPLOYMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js  tmpclaude-607e-cwd  vite.config.ts
backend/: .env.example  main.py  requirements.txt  test_tax_calculator.py  tmpclaude-ebd1-cwd
backend/app/: __init__.py  tmpclaude-28cc-cwd
backend/app/agents/: audit_agent.py  document_agent.py  tax_prep_agent.py  voice_agent.py
backend/app/services/: benchmarking.py
backend/app/tax_engine/: __init__.py  tax_calculator.py
backend/app/utils/: __init__.py  conversation_store.py
backend/tests/: test_api.py  test_conversation_store.py  test_tax_engine.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit-defense/: page.tsx
frontend/app/benchmark/: page.tsx
frontend/app/tax-prep/: page.tsx
frontend/app/voice-call/: page.tsx
mock_data/: sample_documents.json  tax_scenarios.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: claude.rs  mod.rs
src-tauri/src/commands/: ai.rs  auth.rs  deductions.rs  documents.rs  mod.rs  returns.rs  settings.rs  tax.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/tax_engine/: mod.rs
src/components/: Layout.tsx
src/lib/: tauri.ts
src/pages/: AIChat.tsx  AuditDefense.tsx  Dashboard.tsx  Deductions.tsx  Documents.tsx  LockScreen.tsx  Settings.tsx  TaxCalculator.tsx  TaxReturns.tsx
src/store/: index.ts
src/styles/: index.css
